5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1795_3141.log
== TEST (2019-05-30 17:32:05) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
cont = 0
while (cont < size(v)):
	m = ((v[cont] ** 1/6)/size(v))**6
	cont = cont + 1
print(round(m,size(v)))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:32:28) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
cont = 1
while (cont < size(v)):
	m = ((v[cont] ** 1/6)/size(v))**6
	cont = cont + 1
print(round(m,size(v)))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:32:42) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
cont = 1
while (cont <= size(v)):
	m = ((v[cont] ** 1/6)/size(v))**6
	cont = cont + 1
print(round(m,size(v)))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:35:31) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
cont = 0
while (cont < size(v)):
	m = v[cont] ** 1/6
	cont = cont + 1
	M = (m/size(v)) ** 6
print(round(M,size(v)))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:35:56) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
cont = 0
while (cont < size(v)):
	m = v[cont] ** 1/6
	cont = cont + 1
	M = (m/size(v)) ** 6
print(round(M,size(v)))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:36:10) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
cont = 0
while (cont > size(v)):
	m = v[cont] ** 1/6
	cont = cont + 1
	M = (m/size(v)) ** 6
print(round(M,size(v)))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:37:34) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
cont = 0
while (cont > size(v)):
	v = v[cont] ** 1/6
	cont = cont + 1
	M = (sum(v)/size(v))**6
print(round(M,size(v)))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:37:45) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
cont = 0
while (cont < size(v)):
	v = v[cont] ** 1/6
	cont = cont + 1
	M = (sum(v)/size(v))**6
print(round(M,size(v)))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:38:30) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
cont = 0
while (cont < size(v)):
	m = v[cont] ** 1/6
	cont = cont + 1
	M = (sum(m)/size(v))**6
print(round(M,size(v)))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:38:49) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
cont = 0
while (cont < size(v)):
	v = v[cont] ** 1/6
	cont = cont + 1
	M = (sum(v)/size(v))**6
print(round(M,size(v)))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:40:09) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
cont = 0
while (cont < size(v)):
	v = v[cont] ** 1/6
	M = (sum(v)/size(v))**6
	cont = cont + 1
print(round(M,size(v)))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:40:24) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
cont = 0
while (cont < size(v)):
	v = v[cont] ** 1/6
	M = (sum(v)/size(v))**6
	cont = cont + 1
print(round(M,size(v)))
	
-- EXECUTION TIME:
0.392726
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.52
---- user output:
0.0
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.39
---- user output:
0.0
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.79
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:42:21) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
cont = 0
while (cont < size(v)):
	v = (v[cont] ** 1/6)
	cont = cont + 1
	M = (sum(v)/size(v))**6
print(round(M,size(v)))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:42:37) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
cont = 0
while (cont < size(v)):
	v = (v[cont] ** 1/6)
	cont = cont + 1
	M = (sum(v)/size(v))**6
print(round(M,size(v)))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:43:02) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
cont = 0
while (cont >= size(v)):
	v = (v[cont] ** 1/6)
	cont = cont + 1
	M = (sum(v)/size(v))**6
print(round(M,size(v)))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:43:11) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
cont = 0
while (cont <= size(v)):
	v = (v[cont] ** 1/6)
	cont = cont + 1
	M = (sum(v)/size(v))**6
print(round(M,size(v)))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:43:16) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
cont = 0
while (cont <= size(v)):
	v = (v[cont] ** 1/6)
	cont = cont + 1
	M = (sum(v)/size(v))**6
print(round(M,size(v)))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:43:23) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
cont = 0
while (cont = size(v)):
	v = (v[cont] ** 1/6)
	cont = cont + 1
	M = (sum(v)/size(v))**6
print(round(M,size(v)))
	
-- ERROR:
File "XXXX", line 4
    while (cont = size(v)):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:43:30) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
cont = 0
while (cont == size(v)):
	v = (v[cont] ** 1/6)
	cont = cont + 1
	M = (sum(v)/size(v))**6
print(round(M,size(v)))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:44:21) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
cont = 0
while (cont == size(v)):
	v = (v[cont] ** 1/6)
	cont = cont + 1
	M = (sum(v)/size(v))**6
print(cont)
print(round(M,size(v)))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:44:45) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
cont = 0
while (cont < size(v)):
	v = (v[cont] ** 1/6)
	cont = cont + 1
	M = (sum(v)/size(v))**6
print(cont)
print(round(M,size(v)))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:45:07) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
cont = 0
while (cont < size(v)):
	v = (v[cont] ** 1/6)
	cont = cont + 1
	M = (sum(v)/size(v))**6
print(cont)
print(round(M,size(v)))
	
-- EXECUTION TIME:
1.01142
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.52
---- user output:
1
0.0
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.39
---- user output:
1
0.0
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.79
---- user output:
1
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:45:39) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
cont = 0
while (cont < size(v)):
	v = (v[cont] ** (1/6))
	cont = cont + 1
	M = (sum(v)/size(v))**6
print(cont)
print(round(M,size(v)))
	
-- EXECUTION TIME:
1.6614
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.52
---- user output:
1
1.9
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.39
---- user output:
1
1.1
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.79
---- user output:
1
1.1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:45:49) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
cont = 0
while (cont < size(v)):
	v = (v[cont] * (1/6))
	cont = cont + 1
	M = (sum(v)/size(v))**6
print(cont)
print(round(M,size(v)))
	
-- EXECUTION TIME:
0.678428
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.52
---- user output:
1
0.0
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.39
---- user output:
1
0.0
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.79
---- user output:
1
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:45:54) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
cont = 0
while (cont < size(v)):
	v = (v[cont] ** (1/6))
	cont = cont + 1
	M = (sum(v)/size(v))**6
print(cont)
print(round(M,size(v)))
	
-- EXECUTION TIME:
0.704782
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.52
---- user output:
1
1.9
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.39
---- user output:
Digite: 1
1.1
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.79
---- user output:
Digite: 1
1.1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:47:07) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
cont = 0
while (cont < size(v)):
	m = v[cont]
	m1 = m ** 1/6
	cont = cont + 1
	M = (sum(m1)/size(m))**6
print(round(M,size(m)))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:48:11) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
cont = 0
while (cont < size(v)):
	m = v[cont]
	m1 = m ** 1/6
	cont = cont + 1
	M = (sum(m1)/size(v))**6
print(round(M,size(v)))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:49:35) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
cont = 0
while (cont < size(v)):
	m = v[cont]
	m1 = m ** 1/6
	M = (sum(m1)/size(v))**6
	cont = cont + 1
print(round(M,size(v)))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:50:07) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
cont = 0
while (cont < size(v)):
	m = v[cont]
	m1 = m ** 1/6
	M = (sum(m1)/size(v))**6
	cont = cont + 1
print(round(M,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:51:49) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
cont = 0
while (cont < size(v)):
	m = v[cont]
	m1 = m ** 1/6
	cont = cont + 1
	M = (sum(m1)/size(v))**6
print(round(M,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:51:57) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
cont = 0
while (cont < size(v)):
	m = v[cont]
	m1 = m ** 1/6
	cont = cont + 1
	M = (sum(m1)/size(v))**6
print(round(M,2))
	
-- EXECUTION TIME:
1.41729
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.52
---- user output:
0.0
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.39
---- user output:
0.0
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.79
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:52:06) 
-- CODE:
from numpy import *
v = array(float(input("Digite: ")))
cont = 0
while (cont < size(v)):
	m = v[cont]
	m1 = m ** 1/6
	cont = cont + 1
	M = (sum(m1)/size(v))**6
print(round(M,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:52:22) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
cont = 0
while (cont < size(v)):
	m = v[cont]
	m1 = m ** 1/6
	cont = cont + 1
	M = (sum(m1)/size(v))**6
print(round(M,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:53:11) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
cont = 0
while (cont < size(v)):
	m = v[cont]
	m1 = m * 1/6
	cont = cont + 1
	M = (sum(m1)/size(v))**6
print(round(M,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:53:41) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
cont = 0
while (cont < size(v)):
	m = v[cont]
	m1 = m * 1/6
	cont = cont + 1
M = (sum(m1)/size(v))**6
print(round(M,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:55:04) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
cont = 0
while (cont < size(v)):
	m = v[cont]
	m1 = m * 1/6
	cont = cont + 1
	M = (sum(m1)/size(v))**6
print(round(M,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
